# kitstroit

./: .env.example  .gitignore  Makefile  README.md  compose.host.yaml  compose.yaml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_initial_content.py  0003_update_experience_and_warranty.py  0004_add_pavlov_sky.py  0005_remove_pavlov_sky_photo.py  0006_add_familia.py  0007_add_dom_bezobrazova_repino.py
backend/app/: api.py  config.py  db.py  main.py  models.py  rate_limit.py  schemas.py  security.py  telegram.py
backend/tests/: conftest.py  test_api.py  test_migrations.py
docs/: ARCHITECTURE.md  ASSETS.md  CONTENT.md  DESIGN.md  OPERATIONS.md  PRODUCT.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  Privacy.tsx  api.ts  components.tsx  main.tsx  styles.css
frontend/src/admin/: AdminApp.tsx  admin.css
infra/: Caddyfile  Caddyfile.host  nginx-host.conf
