[project]
name = "kitstroit-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "pwdlib[argon2]>=0.2,<1",
    "pydantic-settings>=2.10,<3",
    "pyjwt>=2.10,<3",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy[asyncio]>=2.0.41,<3",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21,<1",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
